Refactor library into single object

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>My Library</title>
 </head>
 <body>
+    <header>My Library</header>
+    <div>
+        <button>Add Book</button>
+    </div>
     <table class="book-display">
         <tr>
             <th>Title</th>
