--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,39 @@
     <script defer src="./src/script.js"></script>
     <title>My Library</title>
 </head>
+
 <body>
     <header>My Library</header>
-    <div>
-        <button>Add Book</button>
+    <div class="new-book-button-container">
+        <button>New Book</button>
     </div>
+
+    <div class="add-book-form-container">
+        <form action="javascript:void(0)">
+            <div>
+                <label for="title">Title</label><input id="title" type="text">
+            </div>
+            <div>
+                <label for="author">Author</label><input id="author" type="text">
+            </div>
+            <div>
+                <label for="pages">Pages</label><input id="" typepages="text">
+            </div>
+            <!-- checkbox for read or not -->
+            <button type="submit">Add Book</button>
+            <button class="close-button">Close</button>
+        </form>
+    </div>
+
     <table class="book-display">
-        <tr>
+        <thead>
             <th>Title</th>
             <th>Author</th>
             <th>Pages</th>
             <th>Read</th>
             <th>Remove</th>
-        </tr>
+        </thead>
     </table>
 </body>
+
 </html>
