Fix close button submitting form

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <!-- checkbox for read or not -->
             <button type="submit">Add Book</button>
-            <button class="close-button">Close</button>
+            <button type="button" class="close-button">Close</button>
         </form>
     </div>
 
